# rovo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  DOCUMENTATION_SPEC.md  JETBRAINS.md  LICENSE  NEOVIM.md  README.md  VSCODE.md  justfile
.github/: release-pilot.yml  renovate.json
.github/workflows/: auto-fix.yml  ci.yml  deploy.yml  jetbrains-deploy.yml  jetbrains-plugin.yml  jetbrains-publish.yml  release.yml  vscode-extension.yml  vscode-publish.yml  weekly_release.yml
examples/: swagger.html  todo_api.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
jetbrains-plugin/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
jetbrains-plugin/.intellijPlatform/localPlatformArtifacts/IC-243.21565.193/: bundledPlugin-com.intellij.java-IC-243.21565.193.xml
jetbrains-plugin/src/main/kotlin/com/rovo/lsp/: RovoAnnotator.kt  RovoLanguageServer.kt
lua/rovo/: init.lua
plugin/: rovo.lua
rovo-lsp/: Cargo.toml  README.md  build.rs
rovo-lsp/docs/: README.md
rovo-lsp/docs/annotations/: example.md  hidden.md  id.md  response.md  rovo-ignore.md  security.md  tag.md
rovo-lsp/docs/sections/: examples.md  metadata.md  path-parameters.md  responses.md
rovo-lsp/docs/status-codes/: 200.md  201.md  204.md  400.md  401.md  403.md  404.md  409.md  422.md  500.md  502.md  503.md
rovo-lsp/src/: backend.rs  code_actions.rs  completion.rs  diagnostics.rs  docs.rs  handlers.rs  lib.rs  main.rs  parser.rs  type_resolver.rs  utils.rs
rovo-lsp/tests/: code_actions_test.rs  comment_handling.rs  completion.rs  goto_definition.rs  handlers_test.rs  integration.rs  validation.rs
rovo-lsp/tests/fixtures/: test.rs
rovo-macros/: Cargo.toml  README.md
rovo-macros/src/: lib.rs  parser.rs  utils.rs
rovo-macros/src/parser/: annotations.rs  error.rs  mod.rs  tokens.rs  types.rs
scripts/: sync-jetbrains-icon.sh
src/: lib.rs
tests/: any_routing.rs  basic_docs.rs  compile_fail.rs  comprehensive.rs  parser_edge_cases.rs  path_parameter_primitives.rs  router_edge_cases.rs  router_functionality.rs  rovo_ignore.rs  rustdoc_format.rs  schema_macro.rs  spec_population.rs  validation.rs  with_example.rs
tests/ui/: empty_tag.rs  empty_tag.stderr  example_status_not_in_responses.rs  example_status_not_in_responses.stderr  invalid_example.rs  invalid_example.stderr  invalid_operation_id.rs  invalid_operation_id.stderr  invalid_status_code.rs  invalid_status_code.stderr  missing_response_type.rs  missing_response_type.stderr  missing_type_with_identifier.rs  missing_type_with_identifier.stderr  path_param_name_mismatch.rs  path_param_name_mismatch.stderr  path_param_no_extractor.rs  path_param_no_extractor.stderr  path_param_tuple_mismatch.rs  path_param_tuple_mismatch.stderr  unknown_annotation.rs  unknown_annotation.stderr
vscode-rovo/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
vscode-rovo/client/src/: extension.ts
vscode-rovo/syntaxes/: rovo.tmLanguage.json
zed-rovo/: extension.toml
