[workspace]
members = ["rovo-macros"]
resolver = "2"

[package]
name = "rovo"
version = "0.1.0"
edition = "2021"
description = "A drop-in replacement for axum::Router with effortless OpenAPI documentation"
license = "GPL-3.0"
repository = "https://github.com/a-line/rovo"
readme = "README.md"
keywords = ["axum", "openapi", "swagger", "api", "documentation"]
categories = ["web-programming", "web-programming::http-server"]

[features]
default = []
swagger = ["aide/swagger"]
redoc = ["aide/redoc"]
scalar = ["aide/scalar"]

[dependencies]
rovo-macros = { path = "rovo-macros" }
aide = { version = "0.15", features = ["axum", "axum-json"] }
paste = "1.0"
axum = "0.8.7"

[dev-dependencies]
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.9", features = ["uuid1"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
trybuild = "1.0"
