[package]
name = "rovo-lsp"
version.workspace = true
edition.workspace = true
description = "Language Server Protocol implementation for Rovo annotation validation and completion"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["lsp", "language-server", "rovo", "openapi", "neovim"]
categories = ["development-tools", "text-editors"]

[[bin]]
name = "rovo-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
syn = { version = "2.0", features = ["derive", "parsing", "printing"] }

[dev-dependencies]
tempfile = "3"
