[package]
name = "rovo-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros for rovo - OpenAPI documentation for axum"
license = "GPL-3.0"
repository = "https://github.com/a-line/rovo"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
